added profile with login/logout logs

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,5 +12,80 @@
   },
   "common": {
     "close": "Close"
+  },
+  "header": {
+    "userMenu": "User menu",
+    "profile": "Profile",
+    "logout": "Logout",
+    "toggleTheme": "Toggle theme"
+  },
+  "profile": {
+    "title": "User Profile",
+    "subtitle": "Manage your account settings and view activity logs",
+    "profileInfo": "Profile Information",
+    "editProfile": "Edit Profile",
+    "displayName": "Display Name",
+    "displayNamePlaceholder": "Enter your name",
+    "email": "Email",
+    "emailPlaceholder": "your@email.com",
+    "bio": "Bio",
+    "bioPlaceholder": "Tell us about yourself...",
+    "notSet": "Not set",
+    "save": "Save Changes",
+    "cancel": "Cancel",
+    "sessionInfo": "Session Information",
+    "principalId": "Principal ID",
+    "notLoggedIn": "Please log in to view your profile",
+    "avatar": {
+      "upload": "Upload",
+      "remove": "Remove",
+      "maxSize": "Max 5MB (will be resized to 256x256)",
+      "invalidFileType": "Please select an image file",
+      "fileTooLarge": "Image too large (max 5MB)"
+    },
+    "activityLog": {
+      "title": "Activity Log",
+      "showing": "Showing {{count}} of {{total}} logs",
+      "filters": "Filters",
+      "downloadCSV": "Download CSV",
+      "searchPlaceholder": "Search logs...",
+      "dateFrom": "From Date",
+      "dateTo": "To Date",
+      "actionType": "Action Type",
+      "resourceType": "Resource Type",
+      "timestamp": "Timestamp",
+      "action": "Action",
+      "resourceName": "Resource",
+      "status": "Status",
+      "success": "Success",
+      "failed": "Failed",
+      "noLogs": "No activity logs found",
+      "blockchainDisclaimer": "Activity logs are permanently stored on blockchain and cannot be deleted. This ensures complete audit trail transparency."
+    },
+    "gdpr": {
+      "title": "Export Your Data",
+      "subtitle": "Download all your data in compliance with GDPR",
+      "description": "Download a complete archive of all your data including profile, templates, folders, activity logs, and subscription information.",
+      "export": "Export Data",
+      "cancel": "Cancel",
+      "notLoggedIn": "Please log in to export your data",
+      "fetchingTemplates": "Fetching templates...",
+      "fetchingFolders": "Fetching folders...",
+      "fetchingLogs": "Fetching activity logs...",
+      "creatingArchive": "Creating archive...",
+      "downloading": "Preparing download...",
+      "exporting": "Exporting your data...",
+      "exportSuccess": "Data exported successfully",
+      "exportFailed": "Failed to export data",
+      "blockchainWarning": "Important: Data Permanence",
+      "blockchainExplanation": "Activity logs are stored on the Internet Computer blockchain and are permanent. While you can download all your data, activity logs cannot be deleted from the blockchain. This ensures transparency and security.",
+      "includedData": "Your export includes:",
+      "dataProfile": "Profile information (name, email, avatar)",
+      "dataTemplates": "All document templates and files",
+      "dataFolders": "Folder structure and metadata",
+      "dataLogs": "Complete activity log history (permanent blockchain records)",
+      "dataSubscription": "Subscription and billing information",
+      "dataUsage": "Usage statistics and quotas"
+    }
   }
 }
